# void-wave

./: .gitignore  CMakeLists.txt  DESIGN.md  FEATURES.md  LICENSE.txt  TODO.md  generate_awesome_presets.py  generate_dark_electro.py  generate_presets.py  generate_recipes.py  presets.json  voidwave-features-showcase.html  voidwave-web-demo.html
.github/workflows/: build.yml
Resources/Presets/factory/AWESOME/: Abyssal_Drone.vwpreset  Cybernetic_Bass.vwpreset  Expressive_Pluck.vwpreset  Hypernova.vwpreset  Mind_Bender.vwpreset  Wormhole.vwpreset
Resources/Presets/factory/BASS/: 808_Trap.vwpreset  Acid_Pipeline.vwpreset  Armada_Bass.vwpreset  Blast_Bass.vwpreset  Block_Out_Bass.vwpreset  Boeheim_Bass.vwpreset  Boom_Bass.vwpreset  Dark_Arpeggio.vwpreset  Deep_House_Sub.vwpreset  EBM_Hammer.vwpreset  Electro_Blip.vwpreset  Electro_Funk_Bass.vwpreset  Electrobase_1.vwpreset  Electrobase_2.vwpreset  Electrobase_3.vwpreset  Formant_Wobble.vwpreset  Funk_Bass.vwpreset  Hydraulic_Space.vwpreset  Hyperbase.vwpreset  Itsy_Bitsy_Bass.vwpreset  Jungle_Growl.vwpreset  Neurofunk_Growl.vwpreset  Panic_Bass.vwpreset  Reese_Machine.vwpreset  Reiss_5000.vwpreset  Retox_Bass.vwpreset  Start_Bass.vwpreset  Sub_Drone.vwpreset  Synth_Pulse.vwpreset  Techno_Groove.vwpreset  Terminal_Bass.vwpreset  Trance_Pumper.vwpreset  Warehouse_Sub.vwpreset  Wavetable_Flux.vwpreset  Wob_Wob_Bass.vwpreset  Wobble_Bass.vwpreset
Resources/Presets/factory/LEAD/: Acid_Lead.vwpreset  Boing_Mono.vwpreset  Brock_Out_Lead.vwpreset  Electro_Lead.vwpreset  Exoplanet_Lead.vwpreset  FM_Bell_Lead.vwpreset  Formant_Scream.vwpreset  Glide_Monster.vwpreset  Hyperactive_Lead.vwpreset  Industrial_Lead.vwpreset  Juno_Lead.vwpreset  Minimal_Mono.vwpreset  Oberheim_Lead.vwpreset  Plasma_303.vwpreset  Retox_Lead.vwpreset  Retro_Poly.vwpreset  Saw_Vibrato.vwpreset  Spectrum_Lead.vwpreset  Super_Sore_Lead.vwpreset  Supersaw_Drift.vwpreset  Sync_Rip.vwpreset  Trance_Saw.vwpreset  Vert_Lead.vwpreset  Void_Sequence.vwpreset  Wavetable_Synth_1.vwpreset  Wavetable_Synth_2.vwpreset  Wavetable_Synth_3.vwpreset
Resources/Presets/factory/PAD/: Acid_Rain.vwpreset  Ambient_Wash.vwpreset  Blade_Runner.vwpreset  Choir_Pad.vwpreset  Crossbones_Pad.vwpreset  Daylight_Robbery_Pad.vwpreset  Glasswing.vwpreset  Jungle_Pad.vwpreset  Membrane.vwpreset  Neural_Wash.vwpreset  Retro_Strings.vwpreset  Smooth_Pad.vwpreset  String_Pad.vwpreset  Synth_King_Pad.vwpreset  Synthwave_Dream.vwpreset  Techno_Atmos.vwpreset  Tooth_Dust_Pad.vwpreset  Void_Drift.vwpreset
Resources/Presets/factory/PLUCK/: Acid_Ping.vwpreset  Beam_Force_Pluck.vwpreset  Bell_Drop.vwpreset  Chiptune.vwpreset  Clav_Machine.vwpreset  Donk_Pluck.vwpreset  Electric_Piano.vwpreset  Electro_Pluck.vwpreset  Gamelan.vwpreset  Glass_Harp.vwpreset  Karplus_Steel.vwpreset  Laser_Pluck.vwpreset  Straight_Pluck.vwpreset  Techno_Blip.vwpreset
Resources/Presets/factory/STAB/: Acid_Stab.vwpreset  Daft_Stab.vwpreset  EBM_Stomp.vwpreset  Electro_Chord.vwpreset  Frankenstein_Stab.vwpreset  House_Stab.vwpreset  Hyperactive_Stab.vwpreset  Jungle_Hit.vwpreset  Organ_Hit.vwpreset  Pad_Stab.vwpreset  Rave_Brass_Stab.vwpreset  Search_Stab.vwpreset  Storm_Stab.vwpreset  Techno_Hit.vwpreset
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: EnvelopeGenerator.cpp  EnvelopeGenerator.h  Filter.cpp  Filter.h  LFO.cpp  LFO.h  ModMatrix.cpp  ModMatrix.h  UnisonVoice.cpp  UnisonVoice.h  VoiceManager.cpp  VoiceManager.h  WavetableOscillator.cpp  WavetableOscillator.h
Source/DSP/FXChain/: Chorus.cpp  Chorus.h  Delay.cpp  Delay.h  Distortion.cpp  Distortion.h  Reverb.cpp  Reverb.h
Source/DSP/FXChain/Peverb/: AllPassFilter.h  Delay.cpp  Delay.h  EarlyReflections.cpp  EarlyReflections.h  LateReverb.cpp  LateReverb.h  Nested.h
Source/Data/: PresetManager.cpp  PresetManager.h  WavetableBank.cpp  WavetableBank.h
Source/UI/: EnvelopeSection.cpp  EnvelopeSection.h  FXSection.cpp  FXSection.h  FilterSection.cpp  FilterSection.h  LFOSection.cpp  LFOSection.h  LookAndFeel.cpp  LookAndFeel.h  MacroSection.cpp  MacroSection.h  MidiLearnOverlay.cpp  MidiLearnOverlay.h  ModMatrixSection.cpp  ModMatrixSection.h  OscSection.cpp  OscSection.h  PresetBrowser.cpp  PresetBrowser.h  WavetableDisplay.cpp  WavetableDisplay.h
Windows VST3/Contents/Resources/: moduleinfo.json
installer/: VoidWave.nsi
